Fix: Homepage hero banner size Sets the .section--hero .section__showcase to have a min-height 40vh. this size doesn’t really break they style to much but does have the desired effect #1515

--- a/_styles/home.css
+++ b/_styles/home.css
@@ -92,7 +92,7 @@ input:focus + .focus-reveal {
     background-size: contain;
     flex: 1 1 auto;
     margin-bottom: -32px;
-    min-height: 50vh;
+    min-height: 40vh;
 }
 
 @media all and (min-width: 500px) {
